--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,7 @@ ipch/
 *.cachefile
 *.opendb
 *.db
+.vs/
 
 # Visual Studio profiler
 *.psess
@@ -160,3 +161,9 @@ $RECYCLE.BIN/
 
 # Mac crap
 .DS_Store
+
+#Project
+素材/Icons
+素材/Fonts
+素材/builtin_shaders-2019.2.17f1
+
